# oikia_sv

./: .coverage  .coveragerc  .gitignore  README.md  config.py  main.py  makefile  pyproject.toml  tox.ini
.github/workflows/: api_tests.yml
cli/: auth_commands.py  cli.py  cli_utils.py  core_commands.py  geo_commands.py  user_commands.py
data/csv/france/streets/: liste_rue_par_dep_03.csv  liste_rue_par_dep_04.csv  liste_rue_par_dep_05.csv  liste_rue_par_dep_06.csv  liste_rue_par_dep_07.csv  liste_rue_par_dep_08.csv  liste_rue_par_dep_09.csv  liste_rue_par_dep_10.csv  liste_rue_par_dep_11.csv  liste_rue_par_dep_13.csv  liste_rue_par_dep_15.csv  liste_rue_par_dep_19.csv  liste_rue_par_dep_23.csv  liste_rue_par_dep_26.csv  liste_rue_par_dep_27.csv  (+52 more)
docker/: docker-compose.yml  spark.yml
fixtures/dev/: address.json  administrative_level_one.json  administrative_level_two.json  asset.json  asset_type.json  city.json  city_type.json  continent.json  country.json  country_data.json  currency.json  language.json  menu.json  street.json  street_type.json  top_level_domain.json
middlewares/: authentication.py
models/: assets.py  auth.py  clients.py  core.py  geo.py  intents.py  users.py
routers/: assets.py  auth.py  core.py  geo.py  users.py
routers/v1/: __init__.py  auth.py  core.py  dashboard.py  geo.py  intents.py  users.py
schemas/: assets.py  auth.py  geo.py  intents.py  pagination.py  users.py
signals/: users.py
tests/: conftest.py
tests/core/: test_info.py
utils/: cache.py  crypt.py  db.py  permissions.py  security.py  tasks.py  worker.py
(+1 files in other folders)
